--- a/app/src/main/res/layout/fragment_model.xml
+++ b/app/src/main/res/layout/fragment_model.xml
@@ -942,7 +942,7 @@
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="关于"
+                        android:text="关于q.1"
                         android:textColor="@android:color/white"
                         android:textSize="@dimen/ts_24" />
 
