--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingLeft="@dimen/vs_40"
-    android:paddingRight="@dimen/vs_40">
+    android:padding="@dimen/vs_40">
 
     <RelativeLayout
         android:layout_width="wrap_content"
