--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -4,9 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingLeft="@dimen/vs_40"
-    android:paddingRight="@dimen/vs_40"
-    android:paddingTop="@dimen/vs_40">
+    android:padding="@dimen/vs_40">
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -266,9 +264,9 @@
             android:clipToPadding="false"
             android:layout_below="@+id/tvUserHome"
             android:paddingLeft="@dimen/vs_0"
-            android:paddingTop="@dimen/vs_40"
+            android:paddingTop="@dimen/vs_0"
             android:paddingRight="@dimen/vs_0"
-            android:paddingBottom="@dimen/vs_20"
+            android:paddingBottom="@dimen/vs_10"
             app:tv_horizontalSpacingWithMargins="@dimen/vs_10"
             app:tv_layoutManager="V7GridLayoutManager"
             app:tv_selectedItemIsCentered="true"
@@ -284,7 +282,7 @@
             android:layout_below="@+id/tvUserHome"
             android:orientation="horizontal"
             android:paddingLeft="@dimen/vs_0"
-            android:paddingTop="@dimen/vs_40"
+            android:paddingTop="@dimen/vs_0"
             android:paddingRight="@dimen/vs_0"
             android:paddingBottom="@dimen/vs_40"
             app:tv_horizontalSpacingWithMargins="@dimen/vs_10"
