--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -6,8 +6,7 @@
     android:orientation="vertical"
     android:paddingLeft="@dimen/vs_40"
     android:paddingRight="@dimen/vs_40"
-    android:paddingTop="@dimen/vs_30"
-    android:layout_marginBottom="@dimen/vs_30">
+    android:paddingTop="@dimen/vs_30">
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -267,7 +266,7 @@
             android:clipToPadding="false"
             android:layout_below="@+id/tvUserHome"
             android:paddingLeft="@dimen/vs_0"
-            android:paddingTop="@dimen/vs_0"
+            android:paddingTop="@dimen/vs_30"
             android:paddingRight="@dimen/vs_0"
             android:paddingBottom="@dimen/vs_10"
             app:tv_horizontalSpacingWithMargins="@dimen/vs_10"
@@ -285,7 +284,7 @@
             android:layout_below="@+id/tvUserHome"
             android:orientation="horizontal"
             android:paddingLeft="@dimen/vs_0"
-            android:paddingTop="@dimen/vs_0"
+            android:layout_marginTop="@dimen/vs_30"
             android:paddingRight="@dimen/vs_0"
             android:paddingBottom="@dimen/vs_40"
             app:tv_horizontalSpacingWithMargins="@dimen/vs_10"
