--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="color_FF90CA09">#90CA09</color>
     <color name="color_BD0CADE2">#BD0CADE2</color>
     <color name="color_FF0057">#FF0057</color>
+    <color name="color_1BB0CE">#1BB0CE</color>
     <color name="color_FF5F00">#FF5F00</color>
     <color name="color_FFB6C1">#FFB6C1</color>
     <color name="color_3D3D3D">#3D3D3D</color>
