--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -180,7 +180,18 @@
                         android:text="立即播放"
                         android:textColor="@android:color/white"
                         android:textSize="@dimen/vs_20" />
-
+                    <TextView
+                            android:id="@+id/myPush"
+                            android:layout_width="@dimen/vs_120"
+                            android:layout_height="@dimen/vs_40"
+                            android:layout_marginEnd="@dimen/vs_10"
+                            android:layout_marginRight="@dimen/vs_10"
+                            android:background="@drawable/button_detail_mypush"
+                            android:focusable="true"
+                            android:gravity="center"
+                            android:text="自推"
+                            android:textColor="@android:color/white"
+                            android:textSize="@dimen/vs_20" />
                     <TextView
                         android:id="@+id/tvQuickSearch"
                         android:layout_width="@dimen/vs_120"
@@ -204,22 +215,12 @@
                         android:text="加入收藏"
                         android:textColor="@android:color/white"
                         android:textSize="@dimen/vs_20" />
-                    <TextView
-                        android:id="@+id/myPush"
-                        android:layout_width="@dimen/vs_120"
-                        android:layout_height="@dimen/vs_40"
-                        android:background="@drawable/button_detail_mypush"
-                        android:focusable="true"
-                        android:gravity="center"
-                        android:text="自推"
-                        android:textColor="@android:color/white"
-                        android:textSize="@dimen/vs_20" />
+
                     <TextView
                         android:id="@+id/tvSort"
                         android:layout_width="@dimen/vs_120"
                         android:layout_height="@dimen/vs_40"
                         android:layout_marginEnd="@dimen/vs_10"
-                        android:layout_marginRight="@dimen/vs_10"
                         android:background="@drawable/button_detail_sort"
                         android:focusable="true"
                         android:gravity="center"
