--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -209,6 +209,7 @@
                         android:id="@+id/tvCollect"
                         android:layout_width="@dimen/vs_120"
                         android:layout_height="@dimen/vs_40"
+                        android:layout_marginRight="@dimen/vs_10"
                         android:background="@drawable/button_detail_collect"
                         android:focusable="true"
                         android:gravity="center"
