fix - push time

--- a/app/src/main/res/layout/player_vod_control_view.xml
+++ b/app/src/main/res/layout/player_vod_control_view.xml
@@ -48,7 +48,7 @@
 
     <LinearLayout
         android:id="@+id/tv_top_r_container"
-        android:layout_width="120dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:tag="tv_top_container"
         android:visibility="gone"
@@ -58,6 +58,19 @@
         android:layout_marginTop="@dimen/vs_10"
         android:orientation="vertical">
 
+        <TextView
+                android:id="@+id/tv_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:paddingTop="@dimen/vs_20"
+                android:paddingRight="@dimen/vs_20"
+                android:tag="vod_control_pause_time"
+                android:text="00:00/00:00"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/ts_16" />
         <TextView
             android:id="@+id/tv_sys_time"
             android:layout_width="wrap_content"
