--- a/app/src/main/res/layout/player_vod_control_view.xml
+++ b/app/src/main/res/layout/player_vod_control_view.xml
@@ -69,7 +69,7 @@
                 android:paddingRight="@dimen/vs_20"
                 android:tag="vod_control_pause_time"
                 android:text="00:00/00:00"
-                android:textColor="@android:color/color_B1A8A8"
+                android:textColor="@android:color/gray"
                 android:textSize="@dimen/ts_16" />
         <TextView
             android:id="@+id/tv_sys_time"
