--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -118,7 +118,15 @@
                         android:textColor="@color/color_CCFFFFFF"
                         android:textSize="@dimen/ts_20" />
                 </LinearLayout>
-
+                <TextView
+                        android:id="@+id/tvTag"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/vs_5"
+                        android:ellipsize="end"
+                        android:singleLine="true"
+                        android:textColor="@color/color_CCFFFFFF"
+                        android:textSize="@dimen/ts_20" />
                 <TextView
                     android:id="@+id/tvActor"
                     android:layout_width="match_parent"
