--- a/app/src/main/res/layout/fragment_model.xml
+++ b/app/src/main/res/layout/fragment_model.xml
@@ -1045,7 +1045,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="关于hc"
+                            android:text="关于hcal"
                             android:textColor="@android:color/white"
                             android:textSize="@dimen/ts_24" />
 
