--- a/app/src/main/res/layout/fragment_model.xml
+++ b/app/src/main/res/layout/fragment_model.xml
@@ -809,7 +809,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="画面缩放"
+                            android:text="画面尺寸"
                             android:textColor="@android:color/white"
                             android:textSize="@dimen/ts_24" />
 
