--- a/app/src/main/res/layout/player_vod_control_view.xml
+++ b/app/src/main/res/layout/player_vod_control_view.xml
@@ -170,7 +170,21 @@
                 android:text="上一集"
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/ts_20" />
-   
+
+            <TextView
+                    android:id="@+id/play_player"
+                    android:singleLine="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/vs_5"
+                    android:layout_marginRight="@dimen/vs_5"
+                    android:background="@drawable/button_dialog_main"
+                    android:focusable="true"
+                    android:padding="@dimen/vs_10"
+                    android:text="IJK播放器"
+                    android:textColor="@android:color/white"
+                    android:textSize="@dimen/ts_20" />
+
             <TextView
                 android:id="@+id/play_refresh"
                 android:singleLine="true"
@@ -224,20 +238,6 @@
                 android:focusable="true"
                 android:padding="@dimen/vs_10"
                 android:text="x1.0"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/ts_20" />
-
-            <TextView
-                android:id="@+id/play_player"
-                android:singleLine="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/vs_5"
-                android:layout_marginRight="@dimen/vs_5"
-                android:background="@drawable/button_dialog_main"
-                android:focusable="true"
-                android:padding="@dimen/vs_10"
-                android:text="系统播放器"
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/ts_20" />
 
